--- a/bootstrap_maschine/roles/ssh/templates/ssh_config.j2
+++ b/bootstrap_maschine/roles/ssh/templates/ssh_config.j2
@@ -2,14 +2,15 @@
 
 AcceptEnv LANG LC_*
 AllowAgentForwarding no
-{# using a boolean here and not a string, as a string might end up as 'True' if you set the variable to yes (without quote marks) #}
-AllowTcpForwarding {{ 'yes' if allow_tcp_forwarding is defined and allow_tcp_forwarding == true else 'no' }}
+
+AllowTcpForwarding {{ 'yes' if allow_tcp_forwarding | default(false) else 'no' }}
 AllowGroups sshers
 
 ChallengeResponseAuthentication no
 
+# Sicherheitsstarke Ciphers
 Ciphers chacha20-poly1305@openssh.com,aes256-gcm@openssh.com,aes256-ctr
-MACs hmac-sha2-512-etm@openssh.com,hmac-sha2-256-etm@openssh.com,umac-128-etm@openssh.com
+MACs hmac-sha2-512,hmac-sha2-256
 HostKeyAlgorithms ssh-ed25519,ssh-rsa
 KexAlgorithms curve25519-sha256@libssh.org,diffie-hellman-group-exchange-sha256
 
@@ -20,21 +21,17 @@ Compression delayed
 GatewayPorts no
 
 HostbasedAuthentication no
-
 IgnoreRhosts yes
 
-KexAlgorithms curve25519-sha256@libssh.org
+ListenAddress {{ ansible_default_ipv4.address }}:{{ ssh_port | default('22') }}
 
-#ListenAddress {{ ansible_default_ipv4.address }}:{{ ssh_port | default('22') }}
-ListenAddress 0.0.0.0:{{ ssh_port | default('22') }}
 LoginGraceTime 10
 LogLevel INFO
-
 MaxAuthTries 3
 
-PasswordAuthentication yes
+PasswordAuthentication no
 PermitEmptyPasswords no
-PermitRootLogin no
+PermitRootLogin prohibit-password
 Protocol 2
 PubkeyAuthentication yes
 
@@ -42,7 +39,10 @@ StrictModes yes
 Subsystem sftp /usr/lib/openssh/sftp-server
 SyslogFacility AUTH
 
-# Aktivieren führt zu doppeltem MOTD
-#UsePAM yes
+# UsePAM bleibt aus, um doppeltes MOTD zu vermeiden
+UsePAM yes
 
 X11Forwarding no
+
+# Hinweis-Banner für rechtliche Zwecke
+Banner /etc/issue.net
